# ros_libav

./: .gitignore  README.md  requirements.txt  setup.sh
src/launch/: camera_capture.launch  playback.launch  screen_record.launch
src/ros_libav/: CMakeLists.txt  capture.py  common.py  package.xml  playback.py  record.py  screencapture.py
src/ros_libav/launch/: capture.launch  playback.launch  record.launch  screencapture.launch
src/ros_libav/msg/: Stream.msg  StreamEvent.msg
